--- a/scss/sections/_learn.scss
+++ b/scss/sections/_learn.scss
@@ -7,11 +7,6 @@
 
     @include section.background(colors.$learn, "../media/learn_bg.jpg");
 
-    h3 {
-        font-size: 1.3em;
-        margin-top: 0;
-    }
-
     .about-phyff {
         p {
             max-width: 800px;
@@ -26,6 +21,9 @@
     }
     
     .prev-winners {
+
+        text-
+
         span {
             &::after {
                 content: " - ";
@@ -38,6 +36,16 @@
             font-weight: bold;
             font-style: normal;
         }
+
+        p {
+            text-align: inherit;
+        }
+    
+        h3 {
+            font-size: 1.3em;
+            margin-top: 0;
+        }
+    
     }
     
     .inline-link {
@@ -60,10 +68,10 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             padding: 20px 50px;
-    
+            text-align: center;
+
             p {
-                padding: 5px 40px;
-                text-align: center;
+                padding: 5px 10px;
                 margin: 0;
             }
     
